[workspace]
members = [
    "node",
    "orchestrator",
    "common/connection",
]

[workspace.dependencies]
bytes = {version = "1.4.0", features=["std"]}
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
tokio = { version = "1.27.0", features = [ "rt-multi-thread", "net", "socket2", "macros", "io-std", "io-util", "sync" ] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
toml = "0.7.3"
axum = { version="0.6.15" }