[workspace]
members = [
    "node",
    "orchestrator",
    "common/connection",
    "common/util",
    "client",
]

[workspace.dependencies]
bytes = {version = "1.4.0", features=["std"]}
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
tokio = { version = "1.27.0", features = [ "rt-multi-thread", "net", "socket2", "macros", "io-std", "io-util", "sync" ] }
toml = "0.7.3"
rmp-serde = "1.1.1"
rmpv = "1.0.0"
rmp = "0.8.11"
serde = { version = "1.0.160", features = ["derive", "serde_derive", "std"]}
sha3 = "0.10.8"
dashmap = "5.4.0"
async-channel = "1.9.0"
tachyonix = "0.2.0"
rkyv = { version = "0.7.42", features = ["validation", "uuid"] }
config = { version = "0.13.3", features = ["toml", "yaml"] }

[profile.release]
debug = true