[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tachyonix = { workspace = true }
rkyv = { workspace=true }
uuid = { workspace=true }
dashmap = { workspace=true }

connection = { path="../common/connection" }