[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
rmp-serde = { workspace=true }
rmpv = { workspace=true }
rmp = { workspace=true }
bytes = { workspace = true }
tachyonix = { workspace = true }
rkyv = { workspace=true }
#uuid = { workspace=true }
sha3 = { workspace=true }
dashmap = { workspace=true }

connection = { path="../common/connection" }
serde = { workspace=true }


uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"]}
rand = "0.8.5"