[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
rmp-serde = { workspace=true }
rmpv = { workspace=true }
rmp = { workspace=true }
bytes = { workspace = true }
tachyonix = { workspace = true }
rkyv = { workspace=true }
uuid = { workspace=true }
sha3 = { workspace=true }
dashmap = { workspace=true }
config = { workspace=true }

connection = { path="../common/connection" }
util = { path="../common/util" }
serde = { workspace=true, features = ["derive", "serde_derive", "std"] }
