[package]
name = "connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
tachyonix = { workspace = true }
serde = { workspace = true }
bytes = {workspace = true}
rmp-serde = { workspace=true }
rkyv = { workspace=true }
dashmap = { workspace=true }
crossbeam-deque = { workspace=true }

async-channel = "1.9.0"
